--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "postinstall": "bower install"
   },
   "dependencies": {
+    "alertify.js": "^1.0.12",
     "bower": "^1.8.2",
     "node-sass": "^4.7.2"
   }
