--- a/bower.json
+++ b/bower.json
@@ -54,8 +54,7 @@
     "textAngular": "~1.4.6",
     "angular-xeditable": "~0.5.0",
     "ng-js-tree": "~0.0.7",
-    "angular-ui-select": "^0.19.6",
-    "AngularJS-OAuth2": "angularjs-oauth2#^1.2.3"
+    "angular-ui-select": "^0.19.6"
   },
   "resolutions": {
     "angular": "~1.5.9",
