hit and trial/ running via gulp

--- a/package.json
+++ b/package.json
@@ -43,7 +43,8 @@
     "wrench": "~1.5.8"
   },
   "scripts": {
-    "postinstall": "bower install"
+    "postinstall": "bower install",
+    "start": "gulp serve"
   },
   "dependencies": {
     "alertify.js": "^1.0.12",
