--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "wrench": "~1.5.8"
   },
   "scripts": {
+    "start": "node node_modules/gulp/bin/gulp serve:dist", 
     "postinstall": "bower install"
   },
   "dependencies": {
